--- a/Facts.html
+++ b/Facts.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
-        <title>Food</title>
+        <title>Facts</title>
         <link rel="stylesheet" href="Style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
